fixed: z-index

--- a/src/components/portfolio-about-me/styles.scss
+++ b/src/components/portfolio-about-me/styles.scss
@@ -16,7 +16,7 @@
 			display: flex;
 			color: $blue;
 			width: 50vw;
-			z-index: 2;
+			z-index: 1;
 
 			::slotted(p) {
 				padding: 2rem;
