--- a/src/components/portfolio-header-nav/styles.scss
+++ b/src/components/portfolio-header-nav/styles.scss
@@ -6,19 +6,16 @@
 		position: fixed;
 		top: 0;
 		right: 0;
-		width: 100vw;
-		height: 100vh;
 		font-family: $font-family-half-regular-regular;
-		z-index: 12;
+		z-index: 10;
 
 		&__menu {
 			position: absolute;
 			top: 0;
 			right: 0;
 			margin: 0;
-			z-index: 1;
-			width: 100%;
-			height: 100%;
+			width: 100vw;
+			height: 100vh;
 			background: rgba($color: $black, $alpha: 0.9);
 			padding: 6rem 0 3.5rem;
 			transform: translateX(100%);
@@ -27,6 +24,8 @@
 			&.active {
 				transform: translateX(0);
 				color: $black;
+				z-index: 8;
+				
 			}
 
 			.navHeader__links {
@@ -63,7 +62,6 @@
 
 		&__menu--toggle {
 			top: 2.4rem;
-			z-index: 2;
 			right: 2rem;
 			width: 2.2rem;
 			height: 1.8rem;
@@ -72,6 +70,7 @@
 			border-radius: 50%;
 			position: fixed;
 			transition: all 0.2s ease-in-out;
+			z-index: 9;
 
 			@include breakpoint ($medium) {
 				right: 4rem;
