--- a/src/components/portfolio-timeline/includes/portfolio-timeline-item/styles.scss
+++ b/src/components/portfolio-timeline/includes/portfolio-timeline-item/styles.scss
@@ -20,7 +20,7 @@
 			}
 			&:hover {
 				slot[name="timeline__date"]::slotted(*) {
-					border-bottom: 2px solid crimson;
+					border-bottom: 2px solid $blue;
 				}
 			}
 			&.visible {
