--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -9,23 +9,6 @@ $font-family-half-inline-regular: "half_inlineregular", sans-serif;
 $font-family-half-regular-regular: "half_regularregular", sans-serif;
 $font-weight-normal: normal;
 
-// Z-INDEXES
-//HEADER
-$z-index-header: 20;
-//NAV
-$z-index-showMore: 12;
-$z-index-counter: 12;
-$z-index-svg: 11;
-//MAIN
-//LANDINGPAGE
-$z-index-main: 10;
-//ABOUTME
-
-//FOOTER
-$z-index-footer: 20;
-$z-index-footer-brand: 3;
-$z-index-footer-svg: 2;
-
 // COLORS
 $orangeGradient: linear-gradient(90deg, #f7b733, #ff7012);
 $purpleGradient: linear-gradient(90deg, #4a00e0, #8e2de2);
